# cli_developers

./: README.md  package.json  pyproject.toml
devchat/: __init__.py  cli.py  client.py  config.py  security.py  server.py  storage.py  validation.py
tests/: test_secure_chat.py
